ibm-ace-integration-runtime/ingress-endpoint.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-esb-dev-app-ir
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "4096m"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - dashboard-01-ir-app-http.vn
  rules:
  - host: dashboard-01-ir-app-http.vn
    http:
      paths:
      - path: /private/customer/createCustomer/v1
        pathType: Prefix
        backend:
          service:
            name: esb-dev-app-ir
            port:
              number: 7800
      - path: /private/customer/getCustomerInfo/v1
        pathType: Prefix
        backend:
          service:
            name: esb-dev-app-ir
            port:
              number: 7800
      - path: /private/deposit/blockAccount/v1
        pathType: Prefix
        backend:
          service:
            name: esb-dev-app-ir
            port:
              number: 7800
      - path: /private/deposit/getBalance/v1
        pathType: Prefix
        backend:
          service:
            name: esb-dev-app-ir
            port:
              number: 7800
      - path: /private/deposit/createTransaction/v1
        pathType: Prefix
        backend:
          service:
            name: esb-dev-app-ir
            port:
              number: 7800
      - path: /private/deposit/getDepositInfo/v1
        pathType: Prefix
        backend:
          service:
            name: esb-dev-app-ir
            port:
              number: 7800
      - path: /private/account/getAcctInfo/v1
        pathType: Prefix
        backend:
          service:
            name: esb-dev-app-ir
            port:
              number: 7800
      - path: /private/identity/getUserInfo/v1
        pathType: Prefix
        backend:
          service:
            name: esb-dev-app-ir
            port:
              number: 7800
